@@ -374,10 +374,13 @@ Angel Carpintero
    * Removed debian ( to avoid conflicts with debian package) and FreeBSD
      ( no needed to deploy BSD port here ) directories.
    * Improve debian package, create user/group motion and added --chuid motion to init script.
-   * Added help in http control http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=396595.
+   * Added help in http control http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=396595
+     http://www.lavrsen.dk/twiki/bin/view/Motion/FeatureRequest2007x11x19x181541
    * Fixed http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2007x10x23x093651
    * Fix process_id_file when is passed from command line 
    * Fix http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2007x10x27x150419
+   * Added Choose V4L2 palette http://www.lavrsen.dk/twiki/bin/view/Motion/FeatureRequest2007x11x19x032318
+   * Improved in http control ( 'back' link, select box, show current values when are going to be changed ). 
  
 Jared D
    * Change bayer2rgb24() to fix a problem with sn9c102 driver
